// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DotnetYoshi > buildReleasePullRequest > returns release PR changes with defaultInitialVersion 1`] = `
":robot: I have created a release *beep* *boop*
---


## Version 0.0.1, released 1983-10-10

### Bug fixes

* **deps:** update dependency com.google.cloud:google-cloud-spanner to v1.50.0 ([08ca011](https://github.com/googleapis/google-cloud-dotnet/commit/08ca01180a91c0a1ba8992b491db9212))
* **deps:** update dependency com.google.cloud:google-cloud-storage to v1.120.0 ([845db13](https://github.com/googleapis/google-cloud-dotnet/commit/845db1381b3d5d20151cad2588f85feb))

---
This pull request is managed by Increase's [release-please](https://github.com/Increase/release-please) fork.

The [semver version number](https://semver.org/#semantic-versioning-specification-semver) is based on included [commit messages](https://www.conventionalcommits.org/en/v1.0.0/). Alternatively, you can manually set the version number in the title of this pull request.

For a better experience, it is recommended to use either rebase-merge or squash-merge when merging this pull request."
`;

exports[`DotnetYoshi > buildReleasePullRequest > returns release PR changes with semver patch bump 1`] = `
":robot: I have created a release *beep* *boop*
---


## Version 0.123.5, released 1983-10-10

### Bug fixes

* **deps:** update dependency com.google.cloud:google-cloud-spanner to v1.50.0 ([08ca011](https://github.com/googleapis/google-cloud-dotnet/commit/08ca01180a91c0a1ba8992b491db9212))
* **deps:** update dependency com.google.cloud:google-cloud-storage to v1.120.0 ([845db13](https://github.com/googleapis/google-cloud-dotnet/commit/845db1381b3d5d20151cad2588f85feb))

---
This pull request is managed by Increase's [release-please](https://github.com/Increase/release-please) fork.

The [semver version number](https://semver.org/#semantic-versioning-specification-semver) is based on included [commit messages](https://www.conventionalcommits.org/en/v1.0.0/). Alternatively, you can manually set the version number in the title of this pull request.

For a better experience, it is recommended to use either rebase-merge or squash-merge when merging this pull request."
`;

exports[`DotnetYoshi > buildUpdates > builds common files 1`] = `
[
  {
    "createIfMissing": true,
    "path": "apis/Google.Cloud.SecurityCenter.V1/docs/history.md",
    "updater": Changelog {
      "changelogEntry": "## Version 0.0.1, released 2026-05-19

### Bug fixes

* **deps:** update dependency com.google.cloud:google-cloud-spanner to v1.50.0 ([08ca011](https://github.com/googleapis/google-cloud-dotnet/commit/08ca01180a91c0a1ba8992b491db9212))
* **deps:** update dependency com.google.cloud:google-cloud-storage to v1.120.0 ([845db13](https://github.com/googleapis/google-cloud-dotnet/commit/845db1381b3d5d20151cad2588f85feb))",
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
      "versionHeaderRegex": /\\\\n## Version \\[0-9\\[\\]\\+/s,
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "apis/apis.json",
    "updater": Apis {
      "component": "Google.Cloud.SecurityCenter.V1",
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
    },
  },
]
`;

exports[`DotnetYoshi > buildUpdates > builds common files 2`] = `
"## Version 0.0.1, released 1983-10-10

### Bug fixes

* **deps:** update dependency com.google.cloud:google-cloud-spanner to v1.50.0 ([08ca011](https://github.com/googleapis/google-cloud-dotnet/commit/08ca01180a91c0a1ba8992b491db9212))
* **deps:** update dependency com.google.cloud:google-cloud-storage to v1.120.0 ([845db13](https://github.com/googleapis/google-cloud-dotnet/commit/845db1381b3d5d20151cad2588f85feb))"
`;

exports[`DotnetYoshi > buildUpdates > skips changelog for configured libraries 1`] = `
[
  {
    "createIfMissing": false,
    "path": "apis/apis.json",
    "updater": Apis {
      "component": "Google.Cloud.Spanner.Admin.Database.V1",
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
    },
  },
]
`;
